set up recyclerView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,32 +16,14 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".View.HomePage_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".food_item"
-            android:exported="false" />
-        <activity
-            android:name=".View.Login_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".View.Address_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".View.Singup_Activity"
-            android:exported="false" />
-        <activity
-            android:name=".View.Home_Activity"
-            android:exported="false" />
-        <activity
             android:name=".View.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".View.SignUpComplete_Activity"
-            android:exported="true">
+            android:name=".View.Fragment.SplashActivity"
+            android:exported="true"
+            tools:ignore="DuplicateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
